set up container class to prevent site from becoming too wide

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@ html {
     box-sizing: inherit;
 }
 
+.site-container {
+    max-width: 1200px;
+}
 
 body {
     margin: 0;
